# Create_OCR_benchmark_data

./: pyproject.toml
.github/workflows/: CI.yml
data/: rare_images.txt  rare_stacks.txt
src/create_benchmark_data/: classify_images_by_work.py  create_benchmark_for_nyibum.py  create_csv.py  create_csv_for_norbuketaka.py  filter_jsonl_and_create_csv.py  get_benchmark_images.py  get_rare_stacks.py  pipeline.py  utils.py
tests/get_rare_stacks/Google_books/: test_get_google_books_stacks_info.py
tests/get_rare_stacks/Google_books/data/: W1AC390.csv  expected_stack_info.json
